--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
         <img border="0" width="90" src="https://github.com/images/modules/download/tar.png"></a>
     </div>
 
-    <h1><a href="https://github.com/klu2/czechstepbystep">Czech Step by Step</a>
-      <span class="small">by <a href="https://github.com/klu2">klu2</a></span></h1>
+    <h1><a href="https://github.com/klu2/czechstepbystep">Czech Step by Step</a></h1>
 
     <div class="description">
       Vokabeldatei für iVocabulary für das iPhone mit Inhalten von Čeština expres 1
@@ -52,7 +51,7 @@
     
   
       <h2>Authors</h2>
-      <p>Klaus Lehner (klaus81@gmail.com)
+      <p><a href="https://github.com/klu2">Klaus Lehner</a> (klaus81@gmail.com)
 <br/>      </p>
     
 
