--- a/index.html
+++ b/index.html
@@ -45,7 +45,13 @@
     <h1><a href="https://github.com/klu2/czechstepbystep">Czech Step by Step</a></h1>
 
     <div class="description">
-      Vokabeldatei für iVocabulary für das iPhone mit Inhalten von Čeština expres 1
+      Vokabeldatei für iVocabulary für das iPhone mit Inhalten von Čeština expres 1. Dazu einfach diese 
+      <a href="https://github.com/klu2/czechstepbystep/zipball/master">ZIP-Datei</a>
+      herunterladen und entpacken. Mit iVocabulary am Mac oder mit dem 
+      <a href="http://apps.chbeer.de/de/ivocabulary/iphone/#java" target="_blank">Windows-Editor</a> öffnen.
+      Danach könnt ihr alle Vokabeln mit eurem iPhone synchroniseren, vorausgesetzt ihr habt 
+      dort auch <a href="http://itunes.apple.com/de/app/ivocabulary-dein-flexibler/id294531015?mt=8" target="_blank">iVocabulary</a>
+      installiert. Kostet zwar €4,99, ist sein Geld aber wert, wie ich meine (die App ist nicht von mir... ;-))
     </div>
 
     
